Changelog
=========

2.0.0 (unreleased)
------------------

- Make `only in current folder section` selectable in the dropdown menu.
  [Kevin Bieri]

- Adjust stylings for the new ftw.theming.
  [elioschmutz]

- Do not reset the page title on facette search.
  [mathias.leimgruber]

- Use a different request handler for the livesearch.
  [buchi]

- Implement a new livesearch based on jquery autocomplete widget.
  [mathias.leimgruber]

- Moved atomic update feature to collective.solr.
  [mathias.leimgruber]


1.4.4 (2015-12-23)
------------------

- Add English, French and Italian translation of the time range facets (and
  a selection of other message ids).
  [mbaechtold]


1.4.3 (2015-08-11)
------------------

- Fix display of results when the search returns Brains and not Solr flares.
  This fixes searches which don't include searchableText.
  [tschanzt]


1.4.2 (2015-04-24)
------------------

- Fix quoting of searchterm url parameter in search result links.
  [buchi]


1.4.1 (2015-03-25)
------------------

- Allow dots in simple terms / simple searches.
  Fixes issue where a dot in a search term causes the search_pattern template to
  be circumvented, and therefore messing up the relevancy ranking.
  [lgraf]


1.4.0 (2015-02-26)
------------------

- Add support for search results from external sites. Solr flares having a
  getRemoteUrl attribute that starts with 'http' are handled as external
  results. External sites can be indexed with ftw.crawler.
  [buchi]

- BugFix in "recursive_index_security" method. Do not try to reindex the
  security on not catalog aware objects.
  [mathias.leimgruber]

- Some work on docs (fix Pythonism, add some info, improve markup). [jean]


1.3.1 (2014-06-12)
------------------

- Fix error in suggestions when there is no solr response.
  [buchi]

- Make sure that string attributes of a PloneFlare are always utf-8 encoded
  byte strings to be consistent with catalog brains.
  [buchi]


1.3 (2013-12-19)
----------------
