@@ -4,15 +4,26 @@
      i18n:domain="solr">
 
   <tal:facets repeat="facet facets">
-    <div class="filter facets" tal:define="facet_counts facet/counts">
-      <span tal:content="facet/title" i18n:translate="" tal:attributes="class python: not facet_counts and 'selected' or ''" />
-      <ul tal:condition="facet_counts">
-          <li tal:repeat="item facet_counts">
-              <a href="#" tal:content="string:${item/title} (${item/count})"
-                 tal:attributes="href string:${request/ACTUAL_URL}?${item/query}" />
-          </li>
-      </ul>
-    </div>
+    <tal:facet tal:define="facet_counts facet/counts">
+      <div tal:attributes="class python: not facet_counts and 'selected filter' or 'filter'">
+        <a href="#"
+           tal:content="facet/title"
+           i18n:translate=""
+           tal:attributes="tabindex python: '-1' if not facet_counts else nothing;
+                           aria-controls string: ${repeat/facet/index}_filter;
+                           aira-owns string: ${repeat/facet/index}_filter"
+           aria-haspopup="true"></a>
+        <ul class="facets"
+            tal:condition="facet_counts"
+            aria-hidden="true"
+            tal:attributes="id string: ${repeat/facet/index}_filter">
+            <li tal:repeat="item facet_counts">
+                <a href="#" class="facet" tal:content="string:${item/title} (${item/count})"
+                   tal:attributes="href string:${request/ACTUAL_URL}?${item/query}" />
+            </li>
+        </ul>
+      </div>
+    </tal:facet>
   </tal:facets>
 
 </div>
