@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+
+    <javascript id="++resource++ftw.solr/facets.js"
+        insert-after="++resource++ftw.solr/livesearch.js" compression="none" authenticated="False" />
+
+</object>
